testsuite/neg/test_neg_u_float.osl
shader
test_neg_u_float (output color Cout = 0)
{
    float  val = 32.0*raytype("camera");
    float  val2 = 16.0*raytype("camera");
    
    float d = -val;
    if (int(P[0]*64)%2==0) {
        d = -val2;
    }
    
    Cout = color(-d/32.0, -d/32.0, -d/32.0);
}
